--- a/LAHJA/LAHJA.csproj
+++ b/LAHJA/LAHJA.csproj
@@ -40,6 +40,8 @@
 		<PackageReference Include="NSwag.AspNetCore" Version="8.0.2" />
 	</ItemGroup>
 	<ItemGroup>
+	  <Folder Include="ApplicationLayer\ModelGateway\" />
+	  <Folder Include="ApplicationLayer\AuthorizationSession\" />
 	  <Folder Include="ApplicationLayer\RequestEvent\" />
 	  <Folder Include="ApplicationLayer\Roles\" />
 	  <Folder Include="ApplicationLayer\ServiceMethod\" />
