first commit azd 9

--- a/LAHJA/appsettings.json
+++ b/LAHJA/appsettings.json
@@ -8,18 +8,16 @@
   "AllowedHosts": "*",
 
   "BaseUrl": {
-    //"Api": "https://asg.tryasp.net/",
     "Api": "https://asg-api.runasp.net/",
-
-    "Auth": "",
-    "Web": ""
+    "Auth": "https://asg-api.runasp.net/",
+    "Web": "http://lahja.runasp.net/"
   },
 
 
   "JWTSettings": {
     "Key": "LahagaWebSiteApp63727&^%$@#@8gdsdgsug",
-    "Issuer": "LahagaWebSiteApp",
-    "Audience": "LahagaWebSiteAPIClient",
+    "Issuer": "https://asg-api.runasp.net/",
+    "Audience": "http://lahja.runasp.net/",
     "Subject": "LahagaWebSiteAccessToken"
   },
   "ReCaptchaSettings": {
