--- a/LAHJA/appsettings.Development.json
+++ b/LAHJA/appsettings.Development.json
@@ -4,5 +4,21 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "BaseUrl": {
+    //"Api": "https://asg.tryasp.net/",
+    "Api": "https://asg-api.runasp.net/",
+    "Auth": "https://asg-api.runasp.net/",
+    "Web": "https://localhost:7121/"
+  },
+
+
+  "JWTSettings": {
+    "Key": "LahagaWebSiteApp63727&^%$@#@8gdsdgsug",
+    "Issuer": "https://asg-api.runasp.net/",
+    "Audience": "https://localhost:7121/",
+    "Subject": "LahagaWebSiteAccessToken"
   }
+  
 }
