--- a/LAHJA/appsettings.json
+++ b/LAHJA/appsettings.json
@@ -28,5 +28,12 @@
     "SecretKey": "6Ld41JsqAAAAABTs7jzoSZbeSXp2mZA7e9bT-0P0"
     //"SiteKey2": "6LdQw5sqAAAAAHyeyukFA93vzP363zRqTnUZ_UPz",
     //"SecretKey2": "6LdQw5sqAAAAAI1JtSIf5SJezusOJvgF3bgLHn3k"
+  },
+
+  "Cultures": {
+    "en": "English",
+    "ar": "عربي"
+    //"es-ES": "Spanish",
+    //"fr-FR": "France"
   }
 }
